# duq

./: .gitignore  README.md  requirements.txt  setup.cfg
.github/workflows/: ci.yml  formatting_tests.yml  test_code_format.yml
docs/: dimension.ipynb  quantity.ipynb  unit.ipynb
docs/demos_jupyter_notebook/: dimension.ipynb  quantity.ipynb  unit.ipynb
docs/source/: conf.py  duq.data.rst  duq.rst  index.rst  modules.rst
duq/: __init__.py  dimension.py  helpers.py  quantity.py  unit.py
duq/data/: dimensions_units.py  metric_prefixes.py  physical_constants.py  unicode_chars.py
tests/: test_dimension.py
