[metadata]
name = duq
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/duq
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/duq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = duq
packages = find:
python_requires = >=3.6

[options.packages.find]
where = duq