[metadata]
name = duq
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = DUQ provides tools for working with physical Dimensions, Units and Quantities, such as dimensional analysis and unit conversion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/duq
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/duq/issues
license = GNU AFFERO GENERAL PUBLIC LICENSE
license_file = LICENSE
platform = any
keywords = physical quantity, quantity, physical unit, unit, unit conversion, physical dimension, dimension, dimensional analysis
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = .