[metadata]
name = duq
version = 0.0.1
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = DUQ provides tools for working with physical Dimensions, Units and Quantities, such as dimensional analysis and unit conversion.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/duq
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/duq/issues
license = GNU Affero General Public License v3
license_file = LICENSE
platform = any
keywords = physical quantity, quantity, physical unit, unit, unit conversion, physical dimension, dimension, dimensional analysis
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9
install_requires = numpy>=1.17
include_package_data = true

[options.packages.find]
where = .